--- a/scrwtp.BlogPosts/scrwtp.BlogPosts.fsproj
+++ b/scrwtp.BlogPosts/scrwtp.BlogPosts.fsproj
@@ -50,6 +50,7 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
+    <None Include="amb-operator-in-fsharp.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
